First version of simple math operations. Need improvement.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="460dp"
         android:height="64dp"
-        android:gravity="right"
+        android:gravity="end"
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="48sp"
         android:textStyle="bold"
@@ -32,7 +32,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:onClick="addDigit"
-        android:text="1"
+        android:text="@string/digit_one"
         app:layout_constraintBottom_toTopOf="@+id/digitZero"
         app:layout_constraintEnd_toStartOf="@+id/digitTwo"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:onClick="addDigit"
-        android:text="2"
+        android:text="@string/digit_two"
         app:layout_constraintBottom_toTopOf="@+id/comaButton"
         app:layout_constraintEnd_toStartOf="@+id/digitThree"
         app:layout_constraintStart_toEndOf="@+id/digitOne"
@@ -58,7 +58,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:onClick="addDigit"
-        android:text="3"
+        android:text="@string/digit_three"
         app:layout_constraintBottom_toTopOf="@+id/equalsButton"
         app:layout_constraintEnd_toStartOf="@+id/signMinus"
         app:layout_constraintStart_toEndOf="@+id/digitTwo"
@@ -73,7 +73,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:onClick="clearInputField"
-        android:text="Wyczyść"
+        android:text="@string/clear"
         app:layout_constraintBottom_toTopOf="@+id/signMultiply"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bkspButton"
@@ -87,8 +87,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
-        android:onClick="addition"
-        android:text="+"
+        android:onClick="makeEquation"
+        android:text="@string/sign_plus"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/equalsButton"
@@ -100,8 +100,8 @@
         android:layout_height="80dp"
         android:layout_marginBottom="13dp"
         android:layout_marginTop="8dp"
-        android:onClick="equationEquals"
-        android:text="="
+        android:onClick="makeEquation"
+        android:text="@string/sign_equal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/plusSign"
         app:layout_constraintStart_toEndOf="@+id/comaButton"
@@ -115,7 +115,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
-        android:text="*"
+        android:onClick="makeEquation"
+        android:text="@string/sign_multiply"
         app:layout_constraintBottom_toTopOf="@+id/signDivide"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/digitNine"
@@ -129,7 +130,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
-        android:text="/"
+        android:onClick="makeEquation"
+        android:text="@string/sign_divide"
         app:layout_constraintBottom_toTopOf="@+id/signMinus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.927"
@@ -144,7 +146,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
-        android:text="-"
+        android:onClick="makeEquation"
+        android:text="@string/sign_minus"
         app:layout_constraintBottom_toTopOf="@+id/plusSign"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/digitThree"
@@ -157,7 +160,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:onClick="addDigit"
-        android:text="5"
+        android:text="@string/digit_five"
         app:layout_constraintBottom_toTopOf="@+id/digitTwo"
         app:layout_constraintEnd_toStartOf="@+id/digit6"
         app:layout_constraintStart_toEndOf="@+id/digitFour"
@@ -170,7 +173,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:onClick="addDigit"
-        android:text="6"
+        android:text="@string/digit_six"
         app:layout_constraintBottom_toTopOf="@+id/digitThree"
         app:layout_constraintEnd_toStartOf="@+id/signDivide"
         app:layout_constraintStart_toEndOf="@+id/digitFive"
@@ -185,7 +188,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:onClick="addDigit"
-        android:text="7"
+        android:text="@string/digit_seven"
         app:layout_constraintBottom_toTopOf="@+id/digitFour"
         app:layout_constraintEnd_toStartOf="@+id/digitEight"
         app:layout_constraintStart_toStartOf="parent"
@@ -198,7 +201,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:onClick="addDigit"
-        android:text="8"
+        android:text="@string/digit_eight"
         app:layout_constraintBottom_toTopOf="@+id/digitFive"
         app:layout_constraintEnd_toStartOf="@+id/digitNine"
         app:layout_constraintStart_toEndOf="@+id/digitSeven"
@@ -211,7 +214,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:onClick="addDigit"
-        android:text="9"
+        android:text="@string/digit_nine"
         app:layout_constraintBottom_toTopOf="@+id/digit6"
         app:layout_constraintEnd_toStartOf="@+id/signMultiply"
         app:layout_constraintStart_toEndOf="@+id/digitEight"
@@ -225,7 +228,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        android:text="±"
+        android:onClick="makeEquation"
+        android:text="@string/sign_plus_minus"
         app:layout_constraintBottom_toTopOf="@+id/digitSeven"
         app:layout_constraintEnd_toStartOf="@+id/bkspButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -237,7 +241,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="8dp"
         android:onClick="bkspInput"
-        android:text="Cofnij"
+        android:text="@string/bakspace"
         app:layout_constraintEnd_toStartOf="@+id/clearButton"
         app:layout_constraintStart_toEndOf="@+id/changeSign"
         app:layout_constraintTop_toBottomOf="@+id/inputField" />
@@ -251,7 +255,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:onClick="addDigit"
-        android:text="0"
+        android:text="@string/digit_zero"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/comaButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -264,7 +268,7 @@
         android:layout_marginBottom="13dp"
         android:layout_marginTop="8dp"
         android:onClick="addComa"
-        android:text="."
+        android:text="@string/coma"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/equalsButton"
         app:layout_constraintStart_toEndOf="@+id/digitZero"
@@ -279,7 +283,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:onClick="addDigit"
-        android:text="4"
+        android:text="@string/digit_four"
         app:layout_constraintBottom_toTopOf="@+id/digitOne"
         app:layout_constraintEnd_toStartOf="@+id/digitFive"
         app:layout_constraintStart_toStartOf="parent"
