--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:onClick="addDigit"
-        android:text="1"
+        android:text="@string/digit_one"
         app:layout_constraintBottom_toTopOf="@+id/digitZero"
         app:layout_constraintEnd_toStartOf="@+id/digitTwo"
         app:layout_constraintStart_toStartOf="parent" />
@@ -24,7 +24,7 @@
         android:layout_width="120dp"
         android:layout_height="48dp"
         android:onClick="addDigit"
-        android:text="2"
+        android:text="@string/digit_two"
         app:layout_constraintBottom_toTopOf="@+id/comaButton"
         app:layout_constraintEnd_toStartOf="@+id/digitThree"
         app:layout_constraintStart_toEndOf="@+id/digitOne" />
@@ -34,7 +34,7 @@
         android:layout_width="120dp"
         android:layout_height="48dp"
         android:onClick="addDigit"
-        android:text="3"
+        android:text="@string/digit_three"
         app:layout_constraintBottom_toTopOf="@+id/equalsButton"
         app:layout_constraintEnd_toStartOf="@+id/signMinus"
         app:layout_constraintStart_toEndOf="@+id/digitTwo" />
@@ -46,7 +46,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:onClick="clearInputField"
-        android:text="Wyczyść"
+        android:text="@string/clear"
         app:layout_constraintBottom_toTopOf="@+id/signMultiply"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bkspButton" />
@@ -57,8 +57,8 @@
         android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:onClick="addition"
-        android:text="+"
+        android:onClick="makeEquation"
+        android:text="@string/sign_plus"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/equalsButton" />
@@ -67,8 +67,8 @@
         android:id="@+id/equalsButton"
         android:layout_width="120dp"
         android:layout_height="48dp"
-        android:onClick="equationEquals"
-        android:text="="
+        android:onClick="makeEquation"
+        android:text="@string/sign_equal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/plusSign"
         app:layout_constraintStart_toEndOf="@+id/comaButton" />
@@ -79,7 +79,8 @@
         android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="*"
+        android:onClick="makeEquation"
+        android:text="@string/sign_multiply"
         app:layout_constraintBottom_toTopOf="@+id/signDivide"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/digitNine" />
@@ -90,7 +91,8 @@
         android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="/"
+        android:onClick="makeEquation"
+        android:text="@string/sign_divide"
         app:layout_constraintBottom_toTopOf="@+id/signMinus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.927"
@@ -102,7 +104,8 @@
         android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="-"
+        android:onClick="makeEquation"
+        android:text="@string/sign_minus"
         app:layout_constraintBottom_toTopOf="@+id/plusSign"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/digitThree" />
@@ -112,7 +115,7 @@
         android:layout_width="120dp"
         android:layout_height="48dp"
         android:onClick="addDigit"
-        android:text="5"
+        android:text="@string/digit_five"
         app:layout_constraintBottom_toTopOf="@+id/digitTwo"
         app:layout_constraintEnd_toStartOf="@+id/digit6"
         app:layout_constraintStart_toEndOf="@+id/digitFour" />
@@ -122,7 +125,7 @@
         android:layout_width="120dp"
         android:layout_height="48dp"
         android:onClick="addDigit"
-        android:text="6"
+        android:text="@string/digit_six"
         app:layout_constraintBottom_toTopOf="@+id/digitThree"
         app:layout_constraintEnd_toStartOf="@+id/signDivide"
         app:layout_constraintStart_toEndOf="@+id/digitFive" />
@@ -134,7 +137,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:onClick="addDigit"
-        android:text="7"
+        android:text="@string/digit_seven"
         app:layout_constraintBottom_toTopOf="@+id/digitFour"
         app:layout_constraintEnd_toStartOf="@+id/digitEight"
         app:layout_constraintStart_toStartOf="parent" />
@@ -144,7 +147,7 @@
         android:layout_width="120dp"
         android:layout_height="48dp"
         android:onClick="addDigit"
-        android:text="8"
+        android:text="@string/digit_eight"
         app:layout_constraintBottom_toTopOf="@+id/digitFive"
         app:layout_constraintEnd_toStartOf="@+id/digitNine"
         app:layout_constraintStart_toEndOf="@+id/digitSeven" />
@@ -154,7 +157,7 @@
         android:layout_width="120dp"
         android:layout_height="48dp"
         android:onClick="addDigit"
-        android:text="9"
+        android:text="@string/digit_nine"
         app:layout_constraintBottom_toTopOf="@+id/digit6"
         app:layout_constraintEnd_toStartOf="@+id/signMultiply"
         app:layout_constraintStart_toEndOf="@+id/digitEight" />
@@ -165,7 +168,8 @@
         android:layout_height="48dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:text="±"
+        android:onClick="makeEquation"
+        android:text="@string/sign_plus_minus"
         app:layout_constraintBottom_toTopOf="@+id/digitSeven"
         app:layout_constraintEnd_toStartOf="@+id/bkspButton"
         app:layout_constraintStart_toStartOf="parent" />
@@ -175,7 +179,7 @@
         android:layout_width="180dp"
         android:layout_height="48dp"
         android:onClick="bkspInput"
-        android:text="Cofnij"
+        android:text="@string/bakspace"
         app:layout_constraintBottom_toTopOf="@+id/digitEight"
         app:layout_constraintEnd_toStartOf="@+id/clearButton"
         app:layout_constraintStart_toEndOf="@+id/changeSign" />
@@ -187,7 +191,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:onClick="addDigit"
-        android:text="0"
+        android:text="@string/digit_zero"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/comaButton"
         app:layout_constraintStart_toStartOf="parent" />
@@ -197,7 +201,7 @@
         android:layout_width="120dp"
         android:layout_height="48dp"
         android:onClick="addComa"
-        android:text="."
+        android:text="@string/coma"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/equalsButton"
         app:layout_constraintStart_toEndOf="@+id/digitZero" />
@@ -209,7 +213,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:onClick="addDigit"
-        android:text="4"
+        android:text="@string/digit_four"
         app:layout_constraintBottom_toTopOf="@+id/digitOne"
         app:layout_constraintEnd_toStartOf="@+id/digitFive"
         app:layout_constraintStart_toStartOf="parent" />
@@ -219,7 +223,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:height="64dp"
-        android:gravity="right"
+        android:gravity="end"
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="48sp"
         android:textStyle="bold"
