Add advance calculator and start menu view.

--- a/app/src/main/res/layout/start_view.xml
+++ b/app/src/main/res/layout/start_view.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -37,6 +38,19 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="121dp"
+        android:layout_marginStart="121dp"
+        android:layout_marginTop="38dp"
+        android:onClick="startAdvanceCalculator"
+        android:text="Zaawansowany"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,8 +62,9 @@
         android:onClick="startAboutApp"
         android:text="@string/about"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <TextView
         android:id="@+id/textView"
@@ -57,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="106dp"
         android:layout_marginStart="106dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="140dp"
         android:text="@string/app_name"
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="24sp"
