--- a/app/src/main/res/layout/advance_calculator.xml
+++ b/app/src/main/res/layout/advance_calculator.xml
@@ -4,21 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.example.mateusz.calculator.AdvanceCalculatorActivity">
 
     <Button
         android:id="@+id/clearButton2"
         android:layout_width="132dp"
         android:layout_height="60dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:onClick="clearInputField"
         android:text="@string/clear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bkspButton2"
-        app:layout_constraintTop_toBottomOf="@+id/inputField2"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/inputField2" />
 
     <Button
         android:id="@+id/bkspButton2"
@@ -209,8 +208,7 @@
         app:layout_constraintEnd_toStartOf="@+id/digitEight2"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sqrtSign"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/sqrtSign" />
 
     <Button
         android:id="@+id/digitEight2"
