--- a/app/src/main/res/layout/simple_calculator.xml
+++ b/app/src/main/res/layout/simple_calculator.xml
@@ -22,6 +22,7 @@
             android:layout_marginBottom="0dp"
             android:layout_weight="1"
             android:gravity="end"
+            android:singleLine="true"
             android:textColor="@android:color/holo_orange_dark"
             android:textSize="48sp"
             android:visibility="visible"
