--- a/app/src/main/res/layout-land/simple_calculator.xml
+++ b/app/src/main/res/layout-land/simple_calculator.xml
@@ -46,7 +46,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginStart="32dp"
                 android:layout_weight="1"
-                android:onClick="makeEquation"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/sign_plus_minus"
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/digitSeven"
