--- a/app/src/main/res/layout-land/simple_calculator_dark.xml
+++ b/app/src/main/res/layout-land/simple_calculator_dark.xml
@@ -47,7 +47,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginStart="32dp"
                 android:layout_weight="1"
-                android:onClick="makeEquation"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/sign_plus_minus"
                 android:textColor="@android:color/background_dark"
                 android:visibility="visible"
