--- a/app/src/main/res/layout-land/advance_calculator_dark.xml
+++ b/app/src/main/res/layout-land/advance_calculator_dark.xml
@@ -55,7 +55,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="5"
-                android:onClick="makeEquation"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/sign_plus_minus"
                 app:layout_constraintBottom_toTopOf="@+id/digitSeven"
                 app:layout_constraintEnd_toStartOf="@+id/bkspButton"
@@ -101,6 +101,7 @@
                 android:layout_marginBottom="0dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="5"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/sinus"
                 app:layout_constraintBottom_toTopOf="@+id/pow2Sign"
                 app:layout_constraintEnd_toStartOf="@+id/cosSign"
@@ -116,6 +117,7 @@
                 android:layout_marginRight="0dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="5"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/cosinus"
                 app:layout_constraintBottom_toTopOf="@+id/powSign"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -131,6 +133,7 @@
                 android:layout_marginRight="0dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="5"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/tangens"
                 app:layout_constraintBottom_toTopOf="@+id/cosSign"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -146,6 +149,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="5"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/sqrt"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -250,6 +254,7 @@
                 android:layout_marginBottom="0dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/pow2"
                 app:layout_constraintBottom_toTopOf="@+id/equalsButton"
                 app:layout_constraintEnd_toStartOf="@+id/powSign"
@@ -265,6 +270,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
+                android:onClick="makeEquation"
                 android:text="@string/powX"
                 app:layout_constraintBottom_toTopOf="@+id/sqrtSign"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -369,6 +375,7 @@
                 android:layout_marginBottom="0dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/ln"
                 app:layout_constraintBottom_toTopOf="@+id/signDivide"
                 app:layout_constraintEnd_toStartOf="@+id/logSign"
@@ -384,6 +391,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/log"
                 app:layout_constraintBottom_toTopOf="@+id/sinSign"
                 app:layout_constraintEnd_toStartOf="@+id/tgSign"
