--- a/app/src/main/res/layout/advance_calculator_dark.xml
+++ b/app/src/main/res/layout/advance_calculator_dark.xml
@@ -46,7 +46,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
-                android:onClick="makeEquation"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/sign_plus_minus"
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/guideline2"
@@ -105,6 +105,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/sinus"
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/sqrtSign"
@@ -118,6 +119,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/cosinus"
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/pow2Sign"
@@ -131,6 +133,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/tangens"
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/powSign"
@@ -146,6 +149,7 @@
                 android:layout_marginRight="4dp"
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/ln"
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/logSign"
@@ -170,6 +174,7 @@
                 android:layout_marginLeft="4dp"
                 android:layout_marginStart="4dp"
                 android:layout_weight="1"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/sqrt"
                 app:layout_constraintBottom_toTopOf="@+id/digitSeven"
                 app:layout_constraintEnd_toStartOf="@+id/pow2Sign"
@@ -182,6 +187,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/pow2"
                 app:layout_constraintBottom_toTopOf="@+id/digitEight"
                 app:layout_constraintEnd_toStartOf="@+id/powSign"
@@ -193,6 +199,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="makeEquation"
                 android:text="@string/powX"
                 app:layout_constraintBottom_toTopOf="@+id/digitNine"
                 app:layout_constraintEnd_toStartOf="@+id/logSign"
@@ -206,6 +213,7 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginRight="4dp"
                 android:layout_weight="1"
+                android:onClick="makeOneDigitEquation"
                 android:text="@string/log"
                 app:layout_constraintBottom_toTopOf="@+id/signDivide"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
