--- a/app/src/main/res/layout-land/advance_calculator.xml
+++ b/app/src/main/res/layout-land/advance_calculator.xml
@@ -24,6 +24,10 @@
             android:id="@+id/inputField"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
             android:height="60dp"
