--- a/app/src/main/res/layout-land/simple_calculator.xml
+++ b/app/src/main/res/layout-land/simple_calculator.xml
@@ -20,6 +20,10 @@
             android:id="@+id/inputField"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginEnd="32dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginStart="32dp"
             android:layout_weight="1"
             android:height="64dp"
             android:gravity="end"
