--- a/app/src/main/res/layout/advance_calculator.xml
+++ b/app/src/main/res/layout/advance_calculator.xml
@@ -19,6 +19,10 @@
             android:id="@+id/inputField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginStart="4dp"
             android:height="60dp"
             android:gravity="end"
             android:singleLine="true"
