--- a/app/src/main/res/layout/simple_calculator_dark.xml
+++ b/app/src/main/res/layout/simple_calculator_dark.xml
@@ -21,6 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="0dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:gravity="end"
             android:singleLine="true"
