--- a/app/src/main/res/layout/start_view.xml
+++ b/app/src/main/res/layout/start_view.xml
@@ -19,6 +19,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="end"
             android:text="@string/night_mode"
